src/types/tests/snapshots/tgbot__types__tests__chat__set_chat_sticker_set.snap
---
source: src/types/tests/chat.rs
expression: actual_data
---
{
  "chat_id": 1,
  "sticker_set_name": "Sticker Set"
}
