src/types/tests/snapshots/tgbot__types__tests__chat__supergroup_chat.snap
---
source: src/types/tests/chat.rs
expression: expected_struct
---
{
  "type": "supergroup",
  "id": 1,
  "title": "Supergroup Chat",
  "is_forum": true,
  "username": "supergroup_chat"
}
