src/types/tests/snapshots/tgbot__types__tests__chat__supergroup_chat_full_info-2.snap
---
source: src/types/tests/chat.rs
expression: expected_struct
---
{
  "id": 1,
  "type": "supergroup",
  "accent_color_id": 0,
  "max_reaction_count": 0,
  "available_reactions": [
    {
      "type": "emoji",
      "emoji": "👍"
    }
  ],
  "background_custom_emoji_id": "emoji-id",
  "has_hidden_members": true,
  "has_protected_content": true,
  "has_visible_history": true,
  "message_auto_delete_time": 86400,
  "photo": {
    "big_file_id": "big-file-id",
    "big_file_unique_id": "big-file-unique-id",
    "small_file_id": "small-file-id",
    "small_file_unique_id": "small-file-unique-id"
  },
  "pinned_message": {
    "chat": {
      "type": "supergroup",
      "id": 1,
      "title": "Supergroup Chat",
      "username": "supergroup_chat"
    },
    "date": 0,
    "has_protected_content": false,
    "message_id": 1,
    "is_automatic_forward": false,
    "from": {
      "first_name": "User",
      "id": 1,
      "is_bot": false
    },
    "text": "message-text"
  },
  "profile_accent_color_id": 1,
  "profile_background_custom_emoji_id": "emoji-id",
  "active_usernames": [
    "supergroup_chat"
  ],
  "username": "supergroup_chat",
  "description": "Description",
  "invite_link": "example.com/join/supergroup",
  "title": "Supergroup Chat",
  "linked_chat_id": 2,
  "emoji_status_custom_emoji_id": "emoji-id",
  "emoji_status_expiration_date": 0,
  "can_set_sticker_set": true,
  "custom_emoji_sticker_set_name": "test",
  "has_aggressive_anti_spam_enabled": true,
  "is_forum": true,
  "join_to_send_messages": true,
  "join_by_request": true,
  "location": {
    "address": "Address",
    "location": {
      "latitude": 1.0,
      "longitude": 0.0
    }
  },
  "slow_mode_delay": 10,
  "sticker_set_name": "Sticker Set",
  "unrestrict_boost_count": 1,
  "permissions": {
    "can_add_web_page_previews": true,
    "can_change_info": true,
    "can_invite_users": true,
    "can_pin_messages": true,
    "can_send_messages": true,
    "can_send_other_messages": true,
    "can_send_polls": true
  }
}
