src/types/tests/snapshots/tgbot__types__tests__chat__unban_chat_member-2.snap
---
source: src/types/tests/chat.rs
expression: actual_data
---
{
  "chat_id": 1,
  "only_if_banned": true,
  "user_id": 2
}
