src/types/tests/snapshots/tgbot__types__tests__chat__unban_chat_sender_chat.snap
---
source: src/types/tests/chat.rs
expression: actual_data
---
{
  "chat_id": 1,
  "sender_chat_id": 1
}
